# brave-core

./: BUILD.gn
android/: brave_java_sources.gni
app/: bookmarks_strings.grdp  brave_generated_resources.grd  brave_main_delegate.cc  components_brave_strings.grd  generated_resources.grd  settings_strings.grdp
app/resources/: brave_generated_resources_de.xtb  chromium_strings_de.xtb  chromium_strings_it.xtb  chromium_strings_uk.xtb  generated_resources_de.xtb  generated_resources_it.xtb
browser/: BUILD.gn  brave_browser_main_parts.cc  brave_profile_prefs.cc
browser/component_updater/: brave_component_updater_configurator.cc
browser/extensions/: BUILD.gn
browser/infobars/: BUILD.gn
browser/net/: brave_proxying_web_socket.cc
browser/profiles/: BUILD.gn
browser/resources/: resource_ids
browser/search_engines/: tor_window_search_engine_provider_service.cc
browser/ui/: BUILD.gn  brave_pages.cc  (+2 more)
common/: pref_names.cc  pref_names.h
components/webcompat_reporter/browser/: BUILD.gn  webcompat_reporter_service.cc  webcompat_reporter_service.h
patches/: chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-browser-resources-settings-about_page-about_page.html.patch  chrome-browser-ui-cocoa-main_menu_builder.mm.patch  chrome-browser-ui-webui-settings-about_handler.cc.patch  chrome-common-media-cdm_host_file_path.cc.patch  chrome-installer-util-google_update_settings.cc.patch  components-metrics-metrics_service_accessor.cc.patch  third_party-blink-renderer-modules-BUILD.gn.patch
script/: upload_to_aptly  upload_to_rpm_repo
test/: BUILD.gn
(+134 files in other folders)
