import("//build/config/features.gni")

declare_args() {
  webcompat_report_api_endpoint = ""
}

config("webcompat_reporter_config") {
  defines = [
    "WEBCOMPAT_REPORT_ENDPOINT=\"$webcompat_report_api_endpoint\""
  ]
}

source_set("browser") {
  public_configs = [ ":webcompat_reporter_config" ]

  sources = [
    "webcompat_reporter_service.cc",
    "webcompat_reporter_service.h",
  ]

  deps = [
    "//base",
    "//net",
    "//content/public/browser",
    "//services/network/public/cpp",
    "//brave/components/brave_referrals/browser",
    "//brave/common",
  ]
}
